# ReiProxy

./: LICENSE  README.md  main.py  pyproject.toml  screens.json
app/: gradle.properties  settings.gradle.kts
app/app/: build.gradle.kts  proguard-rules.pro
app/app/src/androidTest/java/io/yarburart/reiproxy/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/io/yarburart/reiproxy/: MainActivity.kt  cert.kt  load_payloads.kt
app/app/src/main/java/io/yarburart/reiproxy/core/: Encoding.kt  proxy.kt  raw_requests.kt
app/app/src/main/java/io/yarburart/reiproxy/data/: Repositories.kt  SettingsManager.kt
app/app/src/main/java/io/yarburart/reiproxy/db/: Dao.kt  Entities.kt  ReiProxyDatabase.kt
app/app/src/main/res/drawable/: rounded_format_list_bulleted_24.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/io/yarburart/reiproxy/: ExampleUnitTest.kt
app/app/src/test/java/io/yarburart/reiproxy/core/: EncodingTest.kt
app/app/src/test/java/io/yarburart/reiproxy/data/: RepositoryTest.kt
app/app/src/test/java/io/yarburart/reiproxy/db/: MapperTest.kt  ProjectDaoTest.kt  (+1 more)
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
libs/applibs/: proxy.py  request_read.py
libs/uix/: root.py
libs/uix/baseclass/: auth_screen.py  base_screen.py  history_screen.py  home_screen.py  tools_screen.py
libs/uix/kv/: auth_screen.kv  history_screen.kv  home_screen.kv  settings_screen.kv  tools_screen.kv
libs/uix/widgets/: dock.kv  dock.py  hitem.kv  rsec.kv
(+21 files in other folders)
